fix: bottom cutting off content

--- a/src/carta_default.css
+++ b/src/carta_default.css
@@ -83,7 +83,7 @@
 .carta-theme__default .carta-input,
 .carta-theme__default .carta-renderer {
 	height: 100%;
-	overflow-y: scroll;
+	margin-bottom: 200px;
 }
 
 /* Icons */
